fix spacing between sections to 5 rem

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -74,7 +74,9 @@ img {
   font-size: 18px;
 }
 
-/* Vertically aligned hero element*/
+.wg-blank {
+  margin-top: 5rem;
+}
 
 
 @import "martel";
