--- a/assets/scss/wowchemy/widgets/_featurette.scss
+++ b/assets/scss/wowchemy/widgets/_featurette.scss
@@ -8,6 +8,7 @@
   line-height: 1.5;
   color: #555;
   text-align: center;
+  margin-top: 5rem; // supaya tidak mepet ke hero page
 }
 
 .featurette .section-subheading {
