--- a/assets/scss/wowchemy/widgets/_people.scss
+++ b/assets/scss/wowchemy/widgets/_people.scss
@@ -6,6 +6,7 @@
   // font-size: 0.8rem;
   font-size: 0.9rem;
   text-align: center;
+  margin-top: 5rem;
 }
 
 .people-widget .portrait-title h2 {
